# gestures-recognition-diploma

./: .gitignore  README.md
classic_algo/: main.py  pyproject.toml
classic_algo/knn/: first.py  sample.py
classic_algo/svm/: first.py  sample.py  second.py
data/: augmentation.py
frameworks/: pyproject.toml
frameworks/classic_algo_with_mediapipe/: knn_and_svm.py
frameworks/mediapipe/: gestures.py  main.py  process_data.py
frameworks/neural_networks/: cnn.py
neural_network/: pyproject.toml
neural_network/cnn/: first.py  sample.py
