[tool.poetry]
name = "frameworks"
version = "0.1.0"
description = ""
authors = ["dggz <maks-laptev.03@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.6.1"
opencv-python = "^4.11.0.86"
mediapipe = "^0.10.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
